<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bck1"
    android:gravity="center"
    android:orientation="vertical">


   <TextView
        android:id="@+id/marque_scrolling_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:padding="16dp"
        android:scrollHorizontally="true"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:singleLine="true"
        android:text="compete with other kohli fans to prove you are the biggest fan and win exciting prizes"
        android:textSize="20sp" />


    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/lg" />


    <info.hoang8f.widget.FButton
        android:id="@+id/playGame"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/play_game"
        android:textSize="20dp"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textStyle="bold"
        fbutton:buttonColor="@color/lightGreen" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"></View>

    <info.hoang8f.widget.FButton
        android:id="@+id/lbdt"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="Leaderboard"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:fontFamily="sans-serif-smallcaps"
        fbutton:buttonColor="@color/lightGreen"/>




    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"></View>

    <info.hoang8f.widget.FButton
        android:id="@+id/howtoplay"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/rules"
        android:textSize="20dp"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:fontFamily="sans-serif-smallcaps"
        fbutton:buttonColor="@color/lightGreen" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"></View>


    <info.hoang8f.widget.FButton
        android:id="@+id/quit"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/quit"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="20dp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-smallcaps"
        fbutton:buttonColor="@color/lightGreen" />

 <View
     android:layout_width="match_parent"
     android:layout_height="10dp"></View>


    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"/>

 <View
     android:layout_width="match_parent"
     android:layout_height="10dp"></View>

 <com.google.android.gms.ads.AdView
     android:id="@+id/adView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     ads:adSize="BANNER"
     ads:adUnitId="@string/banner_home_footer"
     />
 <com.google.android.gms.ads.AdView
     android:id="@+id/adView1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     ads:adSize="BANNER"
     ads:adUnitId="@string/banner_home_footer1"
     />



</LinearLayout>
